<resources>
    <string name="app_name">BilibiliJetPack</string>
    <!--    <string name="textview2">Kila Kila</string>-->
    <!--    <string name="button1">+1</string>-->
    <!--    <string name="button2">+2</string>-->
    <string name="textview">Kila Kila</string>
    <string name="imageButtonDescription">Description</string>


    <string name="textview1">Team A</string>
    <string name="textview2">Team B</string>
    <string name="scoreA" translatable="false">0</string>
    <string name="scoreB" translatable="false">0</string>
    <string name="button1" translatable="false">+1</string>
    <string name="button2" translatable="false">+2</string>
    <string name="button3" translatable="false">+3</string>
    <string name="undoButton">undo</string>
    <string name="resetButton">reset</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail">Detail</string>
    <string name="button">Button</string>
    <string name="home">Home</string>
</resources>